<resources>
    <string name="app_name">Location Logger</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_clear">Clear</string>
    <string name="action_pin_location">Pin Location</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!--  File name setting -->
    <string name="pref_title_file_name">Log File Name</string>
    <string name="pref_default_file_name">location_log_001</string>
    <string name="log_filename_key">log_file_name</string>

    <string name="filetype_key">filetype</string>
    <string name="pref_title_filetype">File Output Type</string>
    <string name="pref_default_filetype">csv</string>
    <string-array name="pref_filetype_titles">
        <item>CSV Format</item>
        <item>GPX Format</item>
    </string-array>
    <string-array name="pref_filetype_values">
        <item>csv</item>
        <item>gpx</item>
    </string-array>

    <!-- Settings for Location Updates -->
    <string name="location_updates">Location Updates</string>

    <!--  Location Tracking on or off -->
    <string name="location_tracking_key">location_tracking_enabled</string>
    <string name="pref_title_location_tracking_enabled">Track Location?</string>

    <!--  Keep Screen On -->
    <string name="keep_screen_on_key">keep_screen_on_key</string>
    <string name="pref_title_keep_screen_on">Keep Screen On?</string>

    <!--  Update frequency setting -->
    <string name="location_frequency_key">location_frequency</string>
    <string name="pref_title_update_frequency">Update frequency</string>
    <string name="pref_default_location_frequency">30</string>
    <string-array name="pref_update_frequency_titles">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_update_frequency_values">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
    </string-array>

</resources>
