<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.darryncampbell.locationlogger.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="101"
        android:title="@string/action_clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pin_location"
        android:orderInCategory="101"
        android:title="@string/action_pin_location"
        app:showAsAction="never" />
</menu>
